# expo

./: .gitignore  pnpm-lock.yaml
.claude/: settings.local.json
apps/bare-expo/: package.json  tsconfig.json
apps/bare-expo/ios/: run-pod-install.sh
apps/bare-expo/ios/.claude/: settings.local.json
apps/bare-expo/modules/expo-rust/: .gitignore  Cargo.toml  README.md  expo-module.config.json  package.json
apps/bare-expo/modules/expo-rust-jsi/: Cargo.toml  package.json
apps/bare-expo/modules/expo-rust-jsi/android/: CMakeLists.txt  build.gradle.kts
apps/bare-expo/modules/expo-rust-jsi/android/src/main/java/expo/modules/rustjsi/: ExpoRustJsiModule.kt
apps/bare-expo/modules/expo-rust-jsi/ios/: ExpoRustJsi.mm  ExpoRustJsi.podspec
apps/bare-expo/modules/expo-rust-jsi/scripts/: resolve-rust-core.js
apps/bare-expo/modules/expo-rust-jsi/src/: RustString.ts  example_modules.rs  index.ts  lib.rs
apps/bare-expo/modules/expo-rust/android/: CMakeLists.txt  build.gradle  build.gradle.kts
apps/bare-expo/modules/expo-rust/android/src/main/cpp/: jni_entry.cpp
apps/bare-expo/modules/expo-rust/android/src/main/java/expo/modules/rust/: ExpoRustModule.kt
apps/bare-expo/modules/expo-rust/ios/: ExpoRust.h  ExpoRust.mm  ExpoRust.podspec  ExpoRustModule.swift
apps/bare-expo/modules/expo-rust/scripts/: resolve-rust-core.js
apps/bare-expo/modules/expo-rust/src/: RustMath.ts  RustString.ts  index.ts  lib.rs
apps/bare-expo/modules/expo-rust/tests/: ffi_bridge_tests.rs  record_tests.rs
apps/bare-expo/modules/worklets-tester/: expo-module.config.json
apps/bare-expo/modules/worklets-tester/ios/: WorkletsTesterModule.swift
apps/expo-workflow-testing/.eas/workflows/: test-suite-brownfield-isolated.yml
apps/minimal-tester/ios/: run-pod-install.sh  run-xcode-build.sh
apps/native-component-list/: metro.config.js  package.json  tsconfig.json
apps/native-component-list/src/navigation/: ExpoApisStackNavigator.tsx
apps/native-component-list/src/screens/: FileSystemScreen.tsx  RustModuleScreen.tsx
apps/native-component-list/src/screens/UI/: ToggleScreen.ios.tsx  UIScreen.android.tsx
apps/router-e2e/__e2e__/static-rendering/app/: late-head.tsx
docs/pages/versions/unversioned/sdk/ui/jetpack-compose/: exposeddropdownmenupicker.mdx
docs/public/static/data/unversioned/: expo-status-bar.json
docs/public/static/data/v55.0.0/expo-ui/jetpack-compose/: exposeddropdownmenupicker.json
examples/unity/: MultilingualVoicePlayerController.cs  README.md
tools/src/commands/: GenerateDocsAPIData.ts
